--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo-google-fonts/montserrat": "^0.2.2",
     "@react-native-community/datetimepicker": "6.1.2",
     "@react-native-community/hooks": "^2.8.1",
     "@react-native-community/masked-view": "^0.1.11",
@@ -27,6 +28,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.1",
+    "react-native-country-codes-picker": "^2.2.2",
+    "react-native-country-picker-modal": "^2.0.0",
     "react-native-gesture-handler": "~2.2.0",
     "react-native-modal-datetime-picker": "^13.1.2",
     "react-native-paper": "^4.12.1",
@@ -38,8 +41,7 @@
     "react-native-web": "^0.17.7",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4",
-    "rn-range-slider": "^2.1.1",
-    "@expo-google-fonts/montserrat": "^0.2.2"
+    "rn-range-slider": "^2.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
