--- a/package.json
+++ b/package.json
@@ -30,14 +30,17 @@
     "react-native": "0.68.1",
     "react-native-country-codes-picker": "^2.2.2",
     "react-native-country-picker-modal": "^2.0.0",
+    "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.2.0",
     "react-native-modal-datetime-picker": "^13.1.2",
     "react-native-paper": "^4.12.1",
     "react-native-range-slider": "^0.1.2",
+    "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "~2.8.0",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
+    "react-native-star-rating-widget": "^1.6.0",
     "react-native-web": "^0.17.7",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4",
